testdata/baselines/reference/submodule/conformance/checkJsdocTypeTagOnObjectProperty2.errors.txt
0.js(5,8): error TS2352: Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
0.js(10,14): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
0.js(12,14): error TS2552: Cannot find name 'function'. Did you mean 'Function'?


==== 0.js (3 errors) ====
    // @ts-check
    var lol;
    const obj = {
      /** @type {string|undefined} */
      bar: 42,
           ~~
!!! error TS2352: Conversion of type 'number' to type 'string' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
      /** @type {function(number): number} */
      method1(n1) {
          return "42";
      },
      /** @type {function(number): number} */
                 ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
      method2: (n1) => "lol",
      /** @type {function(number): number} */
                 ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
      arrowFunc: (num="0") => num + 42,
      /** @type {string} */
      lol
    }
    lol = "string"
    /** @type {string} */
    var s = obj.method1(0);
    
    /** @type {string} */
    var s1 = obj.method2("0");